--- a/css/estilos.css
+++ b/css/estilos.css
@@ -13,6 +13,14 @@ body
     margin: 0 auto;
 }
 
+#cabecera {
+    background-color: blue;
+    color: #ddd;
+    font-size: large;
+    font-weight: 400;
+    font-style: italic;
+ }
+
 #container h1 
 {
     font-size: 20px;
